// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text with a hover clause and conditional spread preserves ternary 1`] = `
"// debug
    import { Text } from '@tamagui/core'

    export function Test({ isActive }) {
      return (
        <Text
          cursor="pointer"
          color="hover:color12"
          {...(isActive && {
            color: 'color12',
            fontWeight: '800',
          })}
        >
          hello
        </Text>
      )
    }
"
`;

exports[`bails from non-deterministic values 1`] = `
"
    import { Text } from '@tamagui/core'
    export function Test(props) {
      return (
        <Text
          color={Math.random()}
        />
      )
    }
"
`;

exports[`className + conditional styles get full base styles merged onto + shorthand 1`] = `
"
    import { View } from '@tamagui/core'
    export function Test(props) {
      return (
        <View width={10} bg={props.green ? 'red' : 'blue'} className={props.className} />
      )
    }
"
`;

exports[`className + conditional styles get full base styles merged onto + shorthand 2`] = `""`;

exports[`conditional classname keeps base and concats properly 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test(props) {
      return (
        <View
          flex={1}
          className={isEnabled ? '' : 'disable-all-pointer-events'}
        >
          {props.child}
        </View>
      )
    }
"
`;

exports[`conditional specific after generic style overrides 1`] = `
"
    import { View } from '@tamagui/core'
    export function Test(props) {
      return (
        <View
          p="2"                              // base padding
          pb={floating ? 18 : 15}             // should override bottom
          mr={floating2 ? 2 : 1}              // unrelated ternary
          borderTopRightRadius={10}           // base tr radius
          borderRadius={floating ? 5 : 2}     // should override the tr radius always
          {...floating2 && {
            borderTopLeftRadius: 7
          }}
        />
      )
    }
"
`;

exports[`conditional specific after generic style overrides 2`] = `""`;

exports[`conditional spread with a hover clause preserves ternary 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test({ isActive }) {
      return (
        <View
          backgroundColor="red hover:green"
          cursor="pointer"
          {...(isActive && {
            backgroundColor: 'blue',
          })}
        />
      )
    }
"
`;

exports[`conditional spread with local variable preserves ternary 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test({ isActive }) {
      return (
        <View
          backgroundColor="red"
          {...(isActive && {
            backgroundColor: 'blue',
          })}
        />
      )
    }
"
`;

exports[`conditional spread with runtime variable preserves ternary 1`] = `
"
    import { View } from '@tamagui/core'

    function usePathname() {
      return '/blog'
    }

    const navLinks = [{ name: 'Blog', href: '/blog' }]

    export function Header() {
      const pathname = usePathname()
      return (
        <>
          {navLinks.map((link) => {
            const isActive = pathname.startsWith(link.href)
            return (
              <View
                key={link.name}
                backgroundColor="red"
                {...(isActive && {
                  backgroundColor: 'blue',
                })}
              />
            )
          })}
        </>
      )
    }
"
`;

exports[`conditional styles extract disjoint static siblings 1`] = `
"
import { View } from '@tamagui/core'
    export function Test(props) {
      return (
        <div className={["is_View _w-1646823575", (props.green) ? "_b-1356927054" : "_b-884464985"].filter(Boolean).join(" ")}  />
      )
    }
"
`;

exports[`conditional styles extract disjoint static siblings 2`] = `"._w-1646823575{width:10px}._b-1356927054{background-color:red}._b-884464985{background-color:blue}"`;

exports[`double ternary + spread 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test({ isSettings, isVertical, children }) {
      return (
        <View
          flex={isSettings || isVertical ? 'unset' : 5}
          alignItems="center"
          {...(isVertical && {
            flexDirection: 'column',
            alignItems: 'flex-start',
          })}
        >
          {children}
        </View>
      )
    }
"
`;

exports[`flexBasis: 0 with responsive style extracts correctly 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test() {
      return (
        <div
          className="is_View _f-2086791049"
        />
      )
    }
"
`;

exports[`flexBasis: 0 with responsive style extracts correctly 2`] = `"._f-2086791049{flex-basis:var(--c-flexBasis-1)}@media (min-width: 640px) {._f-2086791049{flex-basis:0px}}"`;

exports[`font_body class is present in BOTH ternary branches 1`] = `
"const _cn2 = "is_Text font_body _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _ff-f-family ";
const _cn = "is_Text font_body _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _ff-f-family _fow-800 ";
import { Text } from '@tamagui/core';
export function Test({
  isActive
}) {
  return <span className={isActive ? _cn : _cn2}>
          hello
        </span>;
}"
`;

exports[`fontFamily shorthand + styled + flatten + ternaries 1`] = `
"
    import { MySizableText } from '@tamagui/test-design-system'
    export function Test(props) {
      return (
        <span
          className={["is_Text _b-1009119199 _ff-1624013054", (active) ? "_o-1507267812" : "_o-867708530"].filter(Boolean).join(" ")}

        />
      )
    }
"
`;

exports[`fontFamily shorthand + styled + flatten works 1`] = `
"
    import { MySizableText } from '@tamagui/test-design-system'
    export function Test(props) {
      return (
        <span
          className="is_Text _b-1009119199 _ff-1624013054"
        />
      )
    }
"
`;

exports[`non-flattened works 1`] = `
"
    import { Text } from '@tamagui/core'
    export function Test(props) {
      return (
        <Text
          textAlign={inMenu ? props.hello : 'right'}
          width="100%"
          opacity="hover:0.85"
          {...(active && {
            fow: '700',
            opacity: 1,
          })}
        />
      )
    }
"
`;

exports[`specific className + ternary 1`] = `
"
    import { MySizableText } from '@tamagui/test-design-system'
    export function Test(props) {
      return (
        <span
          className={["is_Text _b-1009119199 _ff-1624013054 test-class-name", (active) ? "_o-1507267812" : "_o-867708530"].filter(Boolean).join(" ")}


        />
      )
    }
"
`;

exports[`spread + className 1`] = `
"
    import { View } from '@tamagui/core'

    export function Test(props) {
      return (
        <View
          className="ease-in-out-top"
          backgroundColor="#000"
          paddingVertical={2}
          top={0}
          {...(props.conditional && {
            top: -14,
            backgroundColor: '#fff',
          })}
        >
          {child}
        </View>
      )
    }
"
`;

exports[`ternaries + font families works 1`] = `
"
    import { Text } from '@tamagui/core'
    export function Test(props) {
      return (
        <span className={["is_Text _ff-398455870", (window) ? "font_body" : "font_heading"].filter(Boolean).join(" ")} />
      )
    }
"
`;

exports[`ternaries + font families works 2`] = `"._ff-398455870{font-family:var(--f-family)}"`;

exports[`ternary with mixed theme-token and non-token values lowers conditional classes 1`] = `
"
    import { Text } from '@tamagui/core'
    export function Test({ isActive, label }) {
      return (
        <span
          className={["is_Text _fs-1892529890", (isActive) ? "_fw-291937703" : "_fw-291935781", (isActive) ? "_c-1170471721" : "_c-1338525332"].filter(Boolean).join(" ")}


        >
          {label}
        </span>
      )
    }
"
`;

exports[`ternary with mixed theme-token and non-token values lowers conditional classes 2`] = `"._fs-1892529890{font-size:var(--f-size-3)}._fw-291937703{font-weight:600}._fw-291935781{font-weight:400}._c-1170471721{color:color12}._c-1338525332{color:var(--color11)}"`;

exports[`theme + media queries + conditionals extract 1`] = `
"
    import { View } from '@tamagui/core'
    export function Test(props) {
      return (
        <View
          theme="surface1"
          flexDirection="sm:column"
          {...(onlyDemo && {
            flexDirection: 'column',
          })}
        />
      )
    }
"
`;

exports[`theme + media queries + conditionals extract 2`] = `""`;
